Add connectString and DbContext

--- a/GiaoVilla_VillaAPI/appsettings.json
+++ b/GiaoVilla_VillaAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultSQLConnection": "Server=NVFNBLT0030\\GIAOK;Database=Giao_VillaAPI;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+  }
 }
